# simclr-ae

./: .gitignore  README.md  pyproject.toml
simclr_ae/: dataset.py  utils.py
simclr_ae/experiments/: args.py
simclr_ae/experiments/ae/: .env  args.py  datamodule.py  main.py  run.sh  run_experiments.sh
simclr_ae/experiments/ae/results/: ae-train.csv
simclr_ae/experiments/simclr_ae/: .env  args.py  logreg_datamodule.py  main.py  run.sh  run_experiments.sh  simclr_datamodule.py
simclr_ae/experiments/simclr_ae/results/: simclr-eval-ae-nonfrozen.csv  simclr-eval.csv  simclr-train-ae-nonfrozen.csv  simclr-train.csv
simclr_ae/models/ae/: dataset.py  model.py  module.py
simclr_ae/models/decoder/: decoder.py
simclr_ae/models/encoder/: encoder.py
simclr_ae/models/logreg/: dataset.py  module.py  utils.py
simclr_ae/models/simclr/: dataset.py  loss.py  model.py  module.py  utils.py
