[tool.poetry]
name = "simclr-ae"
version = "0.1.0"
description = "Improving Nonlinear Projection Heads using Pretrained Autoencoder Embeddings"
authors = [
    "Andreas Schliebitz <a.schliebitz@hs-osnabrueck.de>",
    "Heiko Tapken <h.tapken@hs-osnabrueck.de>",
    "Martin Atzmueller <martin.atzmueller@uni-osnabrueck.de>",
]
packages = [{ include = "simclr_ae" }]

[tool.poetry.dependencies]
python = "^3.10"
scipy = "1.12.0"
lightning = "2.2.1"
torchvision = "0.17.0"
pythae = "0.1.2"
mlflow = "2.11.3"
PyYAML = "6.0.1"
joblib = "1.4.0"

[tool.poetry.dev-dependencies]
pytest = "8.0.0"
black = "24.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
